[package]
name = "evildownloader"
version = "0.1.0"
authors = ["PPK <ath455756@gmail.com>"]
edition = "2018"
repository = "https://github.com/DaimaoPPK/EvilDownloader"
license = "ISC OR MIT OR Apache-2.0"
keywords = ["download"]

[dependencies]
minreq = {version = "2.4.2", features = ["punycode", "https"]}